--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 *{
     box-sizing : border-box;
   }
+
   table, td{
-      border : 1px solid black;
-    }
+    border : 1px solid black;
+  }
+
+ h1, h2, p{
+    text-align: center;
+  }
   
   td{
     width : 100px;
@@ -13,4 +18,22 @@
 
   #retry{
     margin : 30px auto;
+  }
+
+  .gameBorder{
+    margin : auto;
+    width : 100vh;
+    justify-content: space-evenly;
+    display: flex;
+    border : 1px solid black;
+  }
+
+  #competitor1, #competitor2{
+
+    width : 300px;
+    margin-top : 150px;
+
+    font-size: 2em;
+    font-weight: bold;
+    
   }
